--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@ ul{
   padding: 12px 32px;
   font-size: 1rem;
   text-transform: uppercase;
-  background: rgb(248,217,15);
-  color: #222;
+  background: rgb(24, 1, 36);
+  color: white;
   border: 1px solid #fff;
   font-weight: 600;
   cursor: pointer;
